--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -22,6 +22,10 @@ jobs:
       run: cargo test --verbose
     - name: Run tests release
       run: cargo test --release --verbose
+    - name: Run tests no default features
+      run: cargo test --verbose --no-default-features
+    - name: Run tests release no default features
+      run: cargo test --release --verbose --no-default-features
 
     - name: Set up Rust (nightly) for Miri
       uses: actions-rs/toolchain@v1
