--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,4 +10,7 @@ tokio = { version = "1", features = ["full"] }
 
 [features]
 default = ["min_safety"]
+# If disabled, there is no runtime safety checks in non-debug mode.
+# Increasing the risk of UB. But a lot more efficient since no underlying `Arc` is used.
+# Only consider disabling this if one is certain `Scope` is dropped after all `SArc`.
 min_safety = []
