--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,8 +11,7 @@ edition = "2024"
 tokio = { version = "1", features = ["full"] }
 
 [features]
-default = ["min_safety"]
-# If disabled, there is no runtime safety checks in non-debug mode.
-# Increasing the risk of UB. But a lot more efficient since no underlying `Arc` is used.
-# Only consider disabling this if one is certain `Scoped` is dropped after all `Lifted`.
-min_safety = []
+default = []
+# Enabling will force checks for the unchecked types. Making them perform exactly like
+# the checked versions.
+checked = []
