--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,7 +2,7 @@
 name = "scoped_static"
 description = "Safe promotion of lifetimes to static"
 license = "Apache-2.0"
-version = "0.0.2"
+version = "0.1.0"
 edition = "2024"
 
 [dependencies]
@@ -13,7 +13,7 @@ tokio = { version = "1", features = ["full"] }
 [features]
 default = []
 # Enabling will force checks for the unchecked types. Making them perform exactly like
-# the checked versions.
+# the checked versions. This is intended to only be used for debug purposes.
 checked = []
 
 [package.metadata.docs.rs]
