--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,7 @@ version = "0.1.1"
 edition = "2024"
 
 [dependencies]
+rclite = "0.3"
 
 [dev-dependencies]
 tokio = { version = "1", features = ["full"] }
