--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,6 +13,7 @@ tokio = { version = "1", features = ["full"] }
 
 [features]
 default = []
+test = []
 
 [package.metadata.docs.rs]
 all-features = true
